HexBloom (#130)
* Add HexBloom support

* Add api for wrapping crowns with another hash transform

* moar waxing

* validation api, added constraint checking on functions.

* only t+1 reads required

not "majority" as in 2/3 case, that's only required for writes

* log choam state when not activated

* state logging for domain

* print retries

* Convert to Project Loom virtual threads

* increase vthread count in testing

* some more thread tweaking. surefire "fork always" the fix?

* remove model's override of surefire

* dunno why this is needed for the CI

* redirect

* tweakin'

* tweak

* ?

* Turn off virtual thread use for most cases

* pass exception through observer

* reenable vthreads

* moar

* finally

* tweakin'

* ?

* revert to platform threads

* Revert swarm test to platform threads

* use fork join pools

* use Executors.newVirtualThreadPerTaskExecutor() for most everything

* extract to inst var

* ::)

* tuning for large_tests

* remove indirection except for modules boned by Eclipse J19 issue

* missed this one

* Integrate HexBloom into Fireflies

Replace "cheesy" version previously implemented with a "real"
implementation.

* update readme